--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 			</a>
 			<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
 				<a href="https://discord.gg/jzCX7R3rCV" class="mr-5 hover:text-white">Discord Server</a>
-				<a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1"
-					class="mr-5 hover:text-white">Watch all
-					my videos</a>
+        <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+	<img src="https://i.ibb.co/NFxGG2Q/Google-Maps-removebg-preview.png" width="150" height="150">
+				<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"
+					class="mr-5 hover:text-white">Location</a>
 				<a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Facebook Page</a>
 
 			</nav>
