--- a/index.html
+++ b/index.html
@@ -50,22 +50,21 @@
 
 			</a>
 			<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-				<a href="https://discord.gg/jzCX7R3rCV" class="mr-5 hover:text-white">Discord Server</a>
+			<br><br><br><br><br>
         <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 	<img src="https://i.ibb.co/NFxGG2Q/Google-Maps-removebg-preview.png" width="150" height="150">
 				<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"
 					class="mr-5 hover:text-white">Location</a>
-				<a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Facebook Page</a>
-
-			</nav>
-			<a href=" https://www.youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1">
-
-				<button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Subscribe
+          <a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
+                  <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="100" height="100">
+			<br><br><br><br>	<a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
         </a>
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
+  <br><br><br><br><br>
+<h2>
+  gm
+  </h2>
+          
 
 		</div>
 	</header>
