--- a/index.html
+++ b/index.html
@@ -49,21 +49,17 @@
 				<span class="ml-3 text-xl">Chellam Stores</span>
 
 			</a>
-			<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+			<nav class="md:ml-auto flex flex-wrap items-down text-base justify-down">
 			<br><br><br><br><br>
         <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 	<img src="https://i.ibb.co/NFxGG2Q/Google-Maps-removebg-preview.png" width="150" height="150">
-				<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"
-					class="mr-5 hover:text-white">Location</a>
-          <a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
+				<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"class="mr-5 hover:text-white">Location</a>
                   <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="100" height="100">
-			<br><br><br><br>	<a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
+<a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
         </a>
+<br><br><br><br><br>
   <br><br><br><br><br>
-<h2>
-  gm
-  </h2>
           
 
 		</div>
