--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
  
 	<link rel="icon" href="https://i.ibb.co/Rp3vMD8/Chellam-Stores.jpg" type="image/x-icon">
 	<header class="text-gray-400 bg-gray-900 body-font">
-		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-			<a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
-				<img src="https://i.ibb.co/Rp3vMD8/Chellam-Stores.jpg" alt="Chellam-Stores" width=300 height=200 border="0">
-				<span class="ml-3 text-xl">Chellam Stores</span>
-        
-   
+    <font style="font-size:56px; font-family:arial black; color:cyan"><Center>Chellam Supermarket
+      
+<font style="font-size:56px; font-family:arial black; color:cyan"><Center>Cheramangalam   
   <header class="text-gray-400 bg-gray-900 body-font">
 		
-
+<right>
 <style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -59,7 +56,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 2000px;
   position: relative;
   margin: auto;
 }
@@ -155,19 +152,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/800px-YouTube_full-color_icon_%282017%29.svg.png" style="width:100%">
+  <img src="https://findabest.in/images/Chellam%20Supermarket-%20Cheramangalam.jpg" style="width:100% height:60">
   
 </div>
 
 <div class="mySlides fade">
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/800px-YouTube_full-color_icon_%282017%29.svg.png" style="width:100%">
+  <img src="https://findabest.in/images/Chellam%20Supermarket-%20Cheramangalam.jpg" style="width:100% height:60">
   
 </div>
 
 <div class="mySlides fade">
   
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/800px-YouTube_full-color_icon_%282017%29.svg.png" style="width:100%">
+  <img src="https://findabest.in/images/Chellam%20Supermarket-%20Cheramangalam.jpg" style="width:100% height:60">
 
 </div>
 
@@ -235,11 +232,7 @@ function showSlides() {
 
 </head>
 	<header class="text-gray-400 bg-gray-900 body-font">
-		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-			<a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
-				<img src="https://i.ibb.co/Rp3vMD8/Chellam-Stores.jpg" alt="Chellam-Stores" width=300 height=200 border="0">
-				<span class="ml-3 text-xl">Chellam Stores</span>
-
+	
 			</a>
 			<nav class="md:ml-auto flex flex-wrap items-down text-base justify-down">
 			<br><br><br><br><br>
