--- a/index.html
+++ b/index.html
@@ -230,16 +230,20 @@ function showSlides() {
 </script>
 
 </head>
+<body>
 	<header class="text-gray-400 bg-gray-900 body-font">
 	
 			</a>
-			<nav class="md:ml-auto flex flex-wrap items-down text-base justify-down">
-			<br><br><br><br><br>
+			
         <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
-	<img src="https://i.ibb.co/NFxGG2Q/Google-Maps-removebg-preview.png" width="150" height="150">
-				<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"class="mr-5 hover:text-white">Location</a>
-                  <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
-	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="100" height="100">
+	<img src="https://i.ibb.co/NFxGG2Q/Google-Maps-removebg-preview.png" width="150" height="150"></a>
+
+ <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="100" height="100"></a>
+
+ 
+  	<br>
+      	<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"class="mr-5 hover:text-white">Location</a>
 <a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
         </a>
 <br><br><br><br><br>
