--- a/index.html
+++ b/index.html
@@ -235,18 +235,15 @@ function showSlides() {
 	
 			</a>
 			
-        <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+        <a  href="https://www.google.com/maps/dir//8.1640384,77.3001626/@8.1638757,77.2999476,84m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
 	<img src="https://i.ibb.co/NFxGG2Q/Google-Maps-removebg-preview.png" width="150" height="150"></a>
-
  <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="100" height="100"></a>
 
- 
-  	<br>
-      	<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"class="mr-5 hover:text-white">Location</a>
+      	<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"class="mr-5 hover:text-white">Location</a>
 <a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
         </a>
-<br><br><br><br><br>
+
   <br><br><br><br><br>
           
 
