--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Chellam Stores</title>
+	<title>Chellam Supermarket</title>
 	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 	<style>
@@ -40,7 +40,7 @@
 		}
 	</style>
  
-	<link rel="icon" href="https://i.ibb.co/Rp3vMD8/Chellam-Stores.jpg" type="image/x-icon">
+	<link rel="icon" href="https://i.ibb.co/b1XPwxh/Chellam-Stores.jpg" type="image/x-icon">
 	<header class="text-gray-400 bg-gray-900 body-font">
     <font style="font-size:56px; font-family:arial black; color:cyan"><Center>Chellam Supermarket
       
@@ -237,6 +237,7 @@ function showSlides() {
          	
         <a  href="https://www.google.com/maps/dir//8.1640384,77.3001626/@8.1638757,77.2999476,84m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
 	<img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220"></a>
+  
        	<br><br><br><br><br><br>	<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
    <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>
@@ -254,7 +255,7 @@ function showSlides() {
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 			<div
 				class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-				<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Chellam Stores
+				<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Chellam Supermarket
 					<br class="hidden lg:inline-block">
             </h1>
 					<p class="mb-8 leading-relaxed">We aim at preparing the students for the world's challenging
