--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
  
 	<link rel="icon" href="https://i.ibb.co/b1XPwxh/Chellam-Stores.jpg" type="image/x-icon">
 	<header class="text-gray-400 bg-gray-900 body-font">
-    <font style="font-size:56px; font-family:arial black; color:cyan"><Center>Chellam Supermarket
+    <font style="font-size:56px; font-family:arial; color:cyan"><b><Center>Chellam Supermarket
       
-<font style="font-size:56px; font-family:arial black; color:cyan"><Center>Cheramangalam   
-  <header class="text-gray-400 bg-gray-900 body-font">
+<font style="font-size:56px; font-family:arial ; color:cyan"><Center>Cheramangalam   
+  <header class="text-gray-400 bg-gray-900 body-font"></b>
 		
 <right>
 <style>
