--- a/index.html
+++ b/index.html
@@ -246,9 +246,13 @@ function showSlides() {
 <a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
         </a>
 
-  <br><br><br><br><br>
-          
-
+<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+<img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
+<a href="https://discord.gg/jzCX7R3rCV" class="mr-5 hover:text-white">Discord Server</a>
+				<a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1"
+					class="mr-5 hover:text-white">Watch all
+					my videos</a>
 		</div>
 	</header>
 	<section class="text-gray-400 bg-gray-900 body-font">
