--- a/index.html
+++ b/index.html
@@ -235,24 +235,19 @@ function showSlides() {
 	</a>
 	<div>	<right>	<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
          	
-        <a  href="https://www.google.com/maps/dir//8.1640384,77.3001626/@8.1638757,77.2999476,84m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
-	<img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220"></a>
-  
-       	<br><br><br><br><br><br>	<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-   <a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
-	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>
-  </div>	
-      	<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in"class="mr-5 hover:text-white">Location</a>
-<a href="https://www.facebook.com/shiva.dharrsan.3/" class="mr-5 hover:text-white">Contact us (G Mail)</a>
-        </a>
+      
 
-<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+
 <a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
-<a href="https://discord.gg/jzCX7R3rCV" class="mr-5 hover:text-white">Discord Server</a>
-				<a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1"
-					class="mr-5 hover:text-white">Watch all
-					my videos</a>
+<font style="font-size:20px; font-family:arial ; color:red"><a href="https://discord.gg/jzCX7R3rCV" class="mr-5 hover:text-white">For Location (Click here)</a>
+<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+
+
+<a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>			
+      	<font style="font-size:20px; font-family:arial ; color:red"><a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1"
+					class="mr-5 hover:text-white">Watch all my videos</a>
 		</div>
 	</header>
 	<section class="text-gray-400 bg-gray-900 body-font">
