--- a/index.html
+++ b/index.html
@@ -238,16 +238,16 @@ function showSlides() {
       
 
 
+
 <a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
-<font style="font-size:20px; font-family:arial ; color:red"><a href="https://discord.gg/jzCX7R3rCV" class="mr-5 hover:text-white">For Location (Click here)</a>
+<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="mr-5 hover:text-white">For Location (Click here)</a>
 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
 
-
-<a  href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+<a  href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSMVkvTCTpGVQCQWbPrMKjvPTRqscmkczlQGhdKjTRXzmtRghhDKCbMcVdRCFsRJJjmgzGbZ" class="text-gray-400">
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>			
-      	<font style="font-size:20px; font-family:arial ; color:red"><a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1"
-					class="mr-5 hover:text-white">Watch all my videos</a>
+      	<font style="font-size:20px; font-family:arial ; color:red"><a href="tel:8008002602"
+					class="mr-5 hover:text-white">Chellamstorestn@gmail.com</a>
 		</div>
 	</header>
 	<section class="text-gray-400 bg-gray-900 body-font">
