--- a/index.html
+++ b/index.html
@@ -244,10 +244,8 @@ function showSlides() {
 <font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="mr-5 hover:text-white">For Location (Click here)</a>
 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
 
-<a  href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSMVkvTCTpGVQCQWbPrMKjvPTRqscmkczlQGhdKjTRXzmtRghhDKCbMcVdRCFsRJJjmgzGbZ" class="text-gray-400">
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>			
-      	<font style="font-size:20px; font-family:arial ; color:red"><a href="tel:8008002602"
-					class="mr-5 hover:text-white">Chellamstorestn@gmail.com</a>
+      	<font style="font-size:20px; font-family:arial ; color:red">Chellamstorestn@gmail.com</a>
 		</div>
 	</header>
 	<section class="text-gray-400 bg-gray-900 body-font">
