--- a/index.html
+++ b/index.html
@@ -242,12 +242,23 @@ function showSlides() {
 <a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
 <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
 <font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="mr-5 hover:text-white">For Location (Click here)</a>
-<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+
 
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>			
       	<font style="font-size:20px; font-family:arial ; color:red">Chellamstorestn@gmail.com</a>
+
+
+
 		</div>
 	</header>
+<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+<img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
+<br>
+	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>	
+<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="mr-5 hover:text-white">For Location (Click here)</a>
+
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/ctbHZGh/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-1.png"width=250>  </a>
+
 	<section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 			<div
@@ -255,11 +266,7 @@ function showSlides() {
 				<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Chellam Supermarket
 					<br class="hidden lg:inline-block">
             </h1>
-					<p class="mb-8 leading-relaxed">We aim at preparing the students for the world's challenging
-						demands. Although a rigorous academic programme is at the core of everything we at Dharrsan
-						education, do an equally outstanding co-curricular and extra-curricular agenda for students
-						endours them with a much needed holistic education to give them the strengths to complete in
-						this competitive world.</p>
+					<p class="mb-8 leading-relaxed">Chellam Supermarket is your much preferred destination where you get the complete range of all provisions needed for your kitchen and home. We make sure to have latest stocks from top brands that are assured and ascertained to be of A-grade quality. Our customers also appreciate us for our cordial customer service that makes your shopping even closer to heart and fulfilling. Above all, our humongous collection of stocks are assorted to meet your complete demands, no matter how unique and handpicked your choices are. And the arrangements are so convenient for you.</p>
 					<div class="flex justify-center">
 						<a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw">
 							<button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Go to youtube</button>
@@ -270,9 +277,7 @@ function showSlides() {
 					</div>
 			</div>
 			<div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-				<iframe width="530" height="400" src="https://www.youtube.com/embed/z_WZKuPvP6Q" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen></iframe>
+			<p class="mb-8 leading-relaxed"><font style="font-size:85px; color:yellow">Best Quality Low Price.</p>	
 			</div>
 		</div>
 	</section>
