--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 	<style>
+    body {
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
 		::-webkit-scrollbar {
 			background-color: rgb(26, 32, 44);
 		}
