--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@ function showSlides() {
 
 
 
-<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
 <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
-<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="mr-5 hover:text-white">For Location (Click here)</a>
+<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="mr-5 hover:text-white">For Location (Click here)</a>
 
 
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>			
@@ -255,13 +255,13 @@ function showSlides() {
 
 		</div>
 	</header>
-<a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="text-gray-400">
+<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
 <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="220" height="220">
 <br>
 	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>	
-<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1654722,77.3002778/@8.1653307,77.3002519,18z/data=!4m2!4m1!3e0?hl=en&gl=in" class="mr-5 hover:text-white">For Location (Click here)</a>
+<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="mr-5 hover:text-white">For Location (Click here)</a>
 
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/ctbHZGh/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-1.png"width=250>  </a>
+<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/ctbHZGh/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-1.png"width=250>  </a>
 
 	<section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
