--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@ function showSlides() {
 						<a href="https://youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw">
 							<button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Go to youtube</button>
 						</a>
+            
 						<a href=" https://www.youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1">
-							<button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Subscribe</button>
+							<button class="ml-4 inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 hover:text-white rounded text-lg">Subscribe</button>
 						</a>
 					</div>
 			</div>
