--- a/index.html
+++ b/index.html
@@ -272,9 +272,7 @@ function showSlides() {
             </h1>
 					<p class="mb-8 leading-relaxed">Chellam Supermarket is your much preferred destination where you get the complete range of all provisions needed for your kitchen and home. We make sure to have latest stocks from top brands that are assured and ascertained to be of A-grade quality. Our customers also appreciate us for our cordial customer service that makes your shopping even closer to heart and fulfilling. Above all, our humongous collection of stocks are assorted to meet your complete demands, no matter how unique and handpicked your choices are. And the arrangements are so convenient for you.</p>
 					<div class="flex justify-center">
-						<a href="tel:9486737572">
-							<button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg"><img src="https://i.ibb.co/cJj4NsV/167-1673356-call-now-png-icon-transparent-png-removebg-preview.png" width="150" height="100"></button>
-						</a>
+						<a href="tel:9486737572"><img src="https://i.ibb.co/cJj4NsV/167-1673356-call-now-png-icon-transparent-png-removebg-preview.png" width="200" height="150">
             
 						<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en">
 							<button class="ml-4 inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 hover:text-white rounded text-lg">Direction (Location)<img src="https://i.ibb.co/7WXcgCs/maps-96in128dp-removebg-preview.png" width="80" height="80"></button>
