--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@ function showSlides() {
 					</div>
 			</div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <div class="sub_page_title2">Our Services:</div>
-	</div> 
+      	</div> 
 
 			<div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
 
@@ -295,7 +294,7 @@ function showSlides() {
 	<section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container px-5 py-24 mx-auto">
 			<div class="flex flex-col text-center w-full mb-20">
-				<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Masterclass Animated videos</h1>
+				<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Our Services</h1>
 				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">We make high quality videos that are interactive
 					sessions.</p><br>
 				<p style="color:blue"><a href="https://discord.gg/jzCX7R3rCV">Click here to Join my Discord server for
