--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@ function showSlides() {
 			</div>
 		</div>
 	</section>
-	<section class="text-gray-400 bg-gray-900 body-font">
+
 		<div class="container px-5 py-24 mx-auto">
 			<div class="flex flex-col text-center w-full mb-20">
-				<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Our Services</h1>
+				<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-yellow"><b>Our Services</b></h1>
 				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">We make high quality videos that are interactive
 					sessions.</p><br>
 				<p style="color:blue"><a href="https://discord.gg/jzCX7R3rCV">Click here to Join my Discord server for
