--- a/index.html
+++ b/index.html
@@ -293,6 +293,15 @@ function showSlides() {
 	</section>
 <font style="font-size:55px; color:yellow">
 <b>Our Services</b></h1>
+<br>
+<font style="font-size:35px; color:white">
+  <li>Best Quality Grocery in Valuable price </li>
+  <li>Diary products and Ice Creams </li>
+  <li>Stationery items </li>
+  <li>Fancy items </li>
+  <li>Gift items </li>
+  
+  
 				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">We make high quality videos that are interactive
 					sessions.</p><br>
 				<p style="color:blue"><a href="https://discord.gg/jzCX7R3rCV">Click here to Join my Discord server for
