--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
 
-  <img src="https://findabest.in/images/Chellam%20Supermarket-%20Cheramangalam.jpg" style="width:100% height:60">
+  <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" style="width:100% height:60">
   
 </div>
 
@@ -300,6 +300,17 @@ function showSlides() {
   <li>Stationery items </li>
   <li>Fancy items </li>
   <li>Gift items </li>
+
+  <font style="font-size:55px; color:yellow">
+<b>Our Services</b></h1>
+<br>
+<font style="font-size:35px; color:white">
+  <li>Best Quality Grocery in Valuable price </li>
+  <li>Diary products and Ice Creams </li>
+  <li>Stationery items </li>
+  <li>Fancy items </li>
+  <li>Gift items </li>
+
   
   
 				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">We make high quality videos that are interactive
