--- a/index.html
+++ b/index.html
@@ -300,18 +300,16 @@ function showSlides() {
   <li>Stationery items </li>
   <li>Fancy items </li>
   <li>Gift items </li>
-
-  <font style="font-size:55px; color:yellow">
-<b>Our Services</b></h1>
 <br>
-<font style="font-size:35px; color:white">
-  <li>Best Quality Grocery in Valuable price </li>
-  <li>Diary products and Ice Creams </li>
-  <li>Stationery items </li>
-  <li>Fancy items </li>
-  <li>Gift items </li>
-
-  
+  <font style="font-size:55px; color:yellow">
+<b>Functional Hours</b></h1>
+<br>
+<font style="font-size:35px; color:red">
+  <li>Opening time: <font style="font-size:35px; color:white">8:00 Am </li>
+  <font style="font-size:35px; color:red">
+  <li>Closing time:<font style="font-size:35px; color:white"> 9:00 Pm</li>
+  <font style="font-size:35px; color:red">
+  <li>Working days<font style="font-size:35px; color:white"> Everyday</li>  
   
 				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">We make high quality videos that are interactive
 					sessions.</p><br>
