--- a/index.html
+++ b/index.html
@@ -310,11 +310,18 @@ function showSlides() {
   <li>Closing time:<font style="font-size:35px; color:white"> 9:00 Pm</li>
   <font style="font-size:35px; color:red">
   <li>Working days<font style="font-size:35px; color:white"> Everyday</li>  
-  
-				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">We make high quality videos that are interactive
-					sessions.</p><br>
-				<p style="color:blue"><a href="https://discord.gg/jzCX7R3rCV">Click here to Join my Discord server for
-						homework-help and Notes.</a></p>
+  <br>
+			 <font style="font-size:55px; color:yellow">
+<b>Contact</b></h1>
+<br>
+<font style="font-size:35px; color:white">
+  <li><a href="tel:9486737572"><img src="https://i.ibb.co/cJj4NsV/167-1673356-call-now-png-icon-transparent-png-removebg-preview.png" width="200" height="150"> +91 948673757</li>
+  <li>Opening time: <font style="font-size:35px; color:white">8:00 Am </li>
+  <font style="font-size:35px; color:red">
+  <li>Closing time:<font style="font-size:35px; color:white"> 9:00 Pm</li>
+  <font style="font-size:35px; color:red">
+  <li>Working days<font style="font-size:35px; color:white"> Everyday</li>
+
 			</div>
 			<div class="flex flex-wrap -m-4">
 				<div class="lg:w-1/3 sm:w-1/2 p-4">
