--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ function showSlides() {
 <b>Contact</b></h1>
 <br>
 <font style="font-size:35px; color:white">
-  <li><a href="tel:9486737572"><img src="https://i.ibb.co/cJj4NsV/167-1673356-call-now-png-icon-transparent-png-removebg-preview.png" width="200" height="150"> +91 948673757</li>
+  <a href="tel:9486737572"><img src="https://i.ibb.co/SR9Y5vQ/167-1673356-call-now-png-icon-transparent-png-removebg-preview-removebg-preview-removebg-preview.png" width="500" height="450"> +91 948673757
   <li>Opening time: <font style="font-size:35px; color:white">8:00 Am </li>
   <font style="font-size:35px; color:red">
   <li>Closing time:<font style="font-size:35px; color:white"> 9:00 Pm</li>
