--- a/index.html
+++ b/index.html
@@ -315,13 +315,18 @@ function showSlides() {
 <b>Contact</b></h1>
 <br>
 <font style="font-size:35px; color:white">
-  <a href="tel:9486737572"><img src="https://i.ibb.co/SR9Y5vQ/167-1673356-call-now-png-icon-transparent-png-removebg-preview-removebg-preview-removebg-preview.png" width="500" height="450"> +91 948673757
-  <li>Opening time: <font style="font-size:35px; color:white">8:00 Am </li>
-  <font style="font-size:35px; color:red">
-  <li>Closing time:<font style="font-size:35px; color:white"> 9:00 Pm</li>
-  <font style="font-size:35px; color:red">
-  <li>Working days<font style="font-size:35px; color:white"> Everyday</li>
+  <a href="tel:9486737572"><img src="https://i.ibb.co/SR9Y5vQ/167-1673356-call-now-png-icon-transparent-png-removebg-preview-removebg-preview-removebg-preview.png" width="500" height="450">
+  <img src="https://i.ibb.co/WVf8WZP/gmail-redesign-removebg-preview-1-removebg-preview.png">
 
+<font style="font-size:55px; color:yellow">
+<b>Our Services</b></h1>
+
+<font style="font-size:35px; color:white">
+  <li>Best Quality Grocery in Valuable price </li>
+  <li>Diary products and Ice Creams </li>
+  <li>Stationery items </li>
+  <li>Fancy items </li>
+  <li>Gift items </li>
 			</div>
 			<div class="flex flex-wrap -m-4">
 				<div class="lg:w-1/3 sm:w-1/2 p-4">
