--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@ function showSlides() {
 <b>Functional Hours</b></h1>
 <br>
 <font style="font-size:35px; color:red">
-  <li>Opening time: <font style="font-size:35px; color:white">8:00 Am </li>
+  <li>Opening time : <font style="font-size:35px; color:white">8:00 Am </li>
   <font style="font-size:35px; color:red">
-  <li>Closing time:<font style="font-size:35px; color:white"> 9:00 Pm</li>
+  <li>Closing time : <font style="font-size:35px; color:white"> 9:00 Pm</li>
   <font style="font-size:35px; color:red">
-  <li>Working days<font style="font-size:35px; color:white"> Everyday</li>  
+  <li>Working days  <font style="font-size:35px; color:white"> Everyday</li>  
   <br>
 			 <font style="font-size:55px; color:yellow">
 <b>Contact</b></h1>
@@ -319,14 +319,16 @@ function showSlides() {
   <img src="https://i.ibb.co/WVf8WZP/gmail-redesign-removebg-preview-1-removebg-preview.png">
 
 <font style="font-size:55px; color:yellow">
-<b>Our Services</b></h1>
+<b>Location</b></h1>
 
-<font style="font-size:35px; color:white">
-  <li>Best Quality Grocery in Valuable price </li>
-  <li>Diary products and Ice Creams </li>
-  <li>Stationery items </li>
-  <li>Fancy items </li>
-  <li>Gift items </li>
+<font style="font-size:35px; color:cyan">
+  <p>Chellam Supermarket- Cheramangalam,<p>
+    <p>Manavalakurichi, </p> 
+    <p> Kanyakumari District,</p>
+     <p>Tamil Nadu.<p>
+      <font style="font-size:35px; color:white">
+       <p> For detail Location (Click here) <p>
+
 			</div>
 			<div class="flex flex-wrap -m-4">
 				<div class="lg:w-1/3 sm:w-1/2 p-4">
