--- a/index.html
+++ b/index.html
@@ -327,91 +327,12 @@ function showSlides() {
     <p> Kanyakumari District,</p>
      <p>Tamil Nadu.<p>
       <font style="font-size:35px; color:white">
-       <p> For detail Location (Click here) <p>
+       <p> <font style="font-size:35px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="mr-5 hover:text-white">For Detailed Location (Click here)</a></p>
 
 			</div>
-			<div class="flex flex-wrap -m-4">
-				<div class="lg:w-1/3 sm:w-1/2 p-4">
-					<div class="flex relative">
-						<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://i.ibb.co/hHxMJTW/1-aj.png">
-
-						<div
-							class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-							<h2 class="tracking-widest text-sm title-font font-medium text-red-400 mb-1">HTML</h2>
-							<h1 class="title-font text-lg font-medium text-white mb-3">Dharrsan Education</h1>
-							<p class="leading-relaxed">We have also taught students HTML. The markup Language for making
-								Websites</p>
-						</div>
-					</div>
-				</div>
-				<div class="lg:w-1/3 sm:w-1/2 p-4">
-					<div class="flex relative">
-						<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://i.ibb.co/s9yWK76/2-aj.png">
-						<div
-							class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-							<h2 class="tracking-widest text-sm title-font font-medium text-red-400 mb-1">Biology</h2>
-							<h1 class="title-font text-lg font-medium text-white mb-3">Easy Biology</h1>
-							<p class="leading-relaxed">We also teach biology with expertise and handfully selected
-								notes.</p>
-						</div>
-					</div>
-				</div>
-				<div class="lg:w-1/3 sm:w-1/2 p-4">
-					<div class="flex relative">
-						<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://i.ibb.co/gmYrhhR/3-aj.png">
-						<div
-							class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-							<h2 class="tracking-widest text-sm title-font font-medium text-red-400 mb-1">Physics</h2>
-							<h1 class="title-font text-lg font-medium text-white mb-3">The tough subject</h1>
-							<p class="leading-relaxed">Ever found physics confusing?🤷‍♂️🤦‍♂️Don't Worry! We will
-								explain it.</p>
-						</div>
-					</div>
-				</div>
-				<div class="lg:w-1/3 sm:w-1/2 p-4">
-					<div class="flex relative">
-						<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://i.ibb.co/HYMc8Zf/4-aj.png">
-						<div
-							class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-							<h2 class="tracking-widest text-sm title-font font-medium text-red-400 mb-1">General
-								Sciences</h2>
-							<h1 class="title-font text-lg font-medium text-white mb-3">Difficult?? Maybe not with
-								Dharrsan Education</h1>
-							<p class="leading-relaxed">We also use the latest technology to teach children.Made with ❤.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="lg:w-1/3 sm:w-1/2 p-4">
-					<div class="flex relative">
-						<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://i.ibb.co/mGhJjRZ/5-aj.png">
-						<div
-							class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-							<h2 class="tracking-widest text-sm title-font font-medium text-red-400 mb-1">Want to become
-								an engineer?</h2>
-							<h1 class="title-font text-lg font-medium text-white mb-3">But don't know where to start?
-							</h1>
-							<p class="leading-relaxed">The most difficult topics including Electromagnetism. Simplified.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="lg:w-1/3 sm:w-1/2 p-4">
-					<div class="flex relative">
-						<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://i.ibb.co/9s0YNDX/6-aj.png">
-						<div
-							class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-							<h2 class="tracking-widest text-sm title-font font-medium text-red-400 mb-1">Being a doctor
-								is not easy.</h2>
-							<h1 class="title-font text-lg font-medium text-white mb-3">But with Dharrsan education ,
-								It's Damn easy.</h1>
-							<p class="leading-relaxed">Learn biology from the most trained experts in India. For free.
-								Really.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		
+			
+						
 	</section>
 	<section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container px-5 py-24 mx-auto">
