--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ function showSlides() {
   <li>Working days  <font style="font-size:35px; color:white"> Everyday</li>  
   <br>
 			 <font style="font-size:55px; color:yellow">
-<b>Contact</b></h1>
+<b>Any Queries, Contact us</b></h1>
 <br>
 <font style="font-size:35px; color:white">
   <a href="tel:9486737572"><img src="https://i.ibb.co/SR9Y5vQ/167-1673356-call-now-png-icon-transparent-png-removebg-preview-removebg-preview-removebg-preview.png" width="500" height="450">
@@ -371,8 +371,10 @@ function showSlides() {
 		<div class="bg-gray-800 bg-opacity-75">
 			<div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
 				<p class="text-gray-400 text-sm text-center sm:text-left">© Chellam Stores. All rights Reserved.
-					Made with HTML5.
 				</p>
+        <br>
+        <font style="font-size:25px; color:white"><br>Contact us</p>
+       <font style="font-size:25px; color:grey"> <p>9486737572 (Call now)
 				<span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
             <a  href="https://www.facebook.com/shiva.dharrsan.3/" class="text-gray-400">
 	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png" width="40" height="40">
