--- a/index.html
+++ b/index.html
@@ -370,22 +370,18 @@ function showSlides() {
 	
 	<footer>
 		<div class="bg-gray-800 bg-opacity-75">
-			<div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-				<p class="text-gray-400 text-sm text-center sm:text-left">© Dharrsan Education. All rights Reserved.
-					Made with HTML5.
+			<div class="container mx-auto py-4 px-7 flex flex-wrap flex-col sm:flex-row">
+				<p class="text-gray-300 text-sm text-center sm:text-left">© Dharrsan Education. All rights Reserved.
 				</p>
 				<span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-            <a  href="https://www.facebook.com/shiva.dharrsan.3/" class="text-gray-400">
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png" width="40" height="40">
+            <a  href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
+	<img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" width="140" height="140">
               
               </svg>
             </a>  
 
-            <a  href="https://discord.gg/jzCX7R3rCV" class="text-gray-400">
-              <img src="https://cdn3.iconfinder.com/data/icons/popular-services-brands-vol-2/512/discord-512.png" alt="Join my Discord server.." width="40" height="40">
-             </a> 
-             <a  href="https://www.youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1" class="text-gray-400">
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/800px-YouTube_full-color_icon_%282017%29.svg.png" width="50" height="50">
+             <a  href="tel:9486737572" class="text-gray-400">
+	<img src="https://i.ibb.co/cJj4NsV/167-1673356-call-now-png-icon-transparent-png-removebg-preview.png" width="200" height="150">
           </span>
 			</div>
 		</div>
