--- a/index.html
+++ b/index.html
@@ -343,9 +343,8 @@ function showSlides() {
             </div>
 					<div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
 
-						<h2 class="text-white text-lg title-font font-medium mb-2">Quality</h2>
-						<p class="leading-relaxed text-base">We Offer high quality education by expert teachers in
-							India.We also use important websites for our information.We are always advanced.</p>
+						<h2 class="text-white text-lg title-font font-medium mb-2"><font style="font-size:28px; color:white">Quality</h2>
+						<p class="leading-relaxed text-base"><font style="font-size:25px; color:grey">The items here have <b>A-Grade Quality</b> in a very valuable and Cheap price</p>
 
 
 					</div>
@@ -353,17 +352,16 @@ function showSlides() {
 				<div
 					class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-800 sm:flex-row flex-col">
 					<div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-						<h2 class="text-white text-lg title-font font-medium mb-2">Topics</h2>
-						<p class="leading-relaxed text-base">We cover many topics like Physics, Biology, Chemistry ,
-							HTML5 ,Python(coming soon) ,CSS and JS(coming soon) and Linux commands.</p>
+						<h2 class="text-white text-lg title-font font-medium mb-2"><font style="font-size:28px; color:white">CCTV Surveillance</h2>
+						<p class="leading-relaxed text-base"><font style="font-size:25px; color:grey">It has well security with CCTV Surveillance</p>
 					</div>
 					<div
 						class="sm:w-42 order-first sm:order-none sm:h-42 h-30 w-30 sm:ml-10 inline-flex items-center justify-center rounded-full text-red-400 bg-gray-800 flex-shrink-0">
-						<img src="https://i.pinimg.com/736x/3d/df/3d/3ddf3d64784a7057b7bc227b4405678a.jpg" class="education">
+						<img src="https://i.ibb.co/tzFLk7f/31-I2-KTMQY0-L-SY355-removebg-preview.png" class="education">
             </div>
 					</div>
-					<a href=https://www.youtube.com/channel/UCxgWID8ZTzPRaAp1jYLKPiw?sub_confirmation=1> <button
-						class="flex mx-auto mt-20 text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Subscribe</button>
+					<a href="tel:9486737572"> <button
+						class="flex mx-auto mt-20 text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Call now</button>
 					</a>
 				</div>
 	</section>
