--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
 
-  <img src="https://i.ibb.co/2c8bNZk/Google-Maps-removebg-preview-removebg-preview-2.png" style="width:100% height:60">
+  <img src="https://i.ibb.co/b1XPwxh/Chellam-Stores.jpg" style="width:200 height:100">
   
 </div>
 
@@ -171,7 +171,11 @@ img {vertical-align: middle;}
   <img src="https://findabest.in/images/Chellam%20Supermarket-%20Cheramangalam.jpg" style="width:100% height:60">
 
 </div>
+<div class="mySlides fade">
 
+  <img src="https://i.ibb.co/b1XPwxh/Chellam-Stores.jpg" style="width:200 height:100">
+  
+</div>
 
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
@@ -181,6 +185,7 @@ img {vertical-align: middle;}
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span> 
 </div>
 
 <script>
