--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@ function showSlides() {
 		</div>
 	</header>
 <br>
-	<img src="https://i.ibb.co/r4XWKDB/logo-gmail-removebg-preview.png" width="80" height="80"></a>	
-<font style="font-size:20px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="mr-5 hover:text-white">For Location (Click here)</a>
+	
+<font style="font-size:20px; font-family:arial ; color:red">
 
 
 
