--- a/index.html
+++ b/index.html
@@ -244,20 +244,13 @@ function showSlides() {
 	</a>
 	<div>	<right>	<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
          	
-      
-
-
-
-
 
 
 		</div>
 	</header>
-<br>
+
 	
 <font style="font-size:20px; font-family:arial ; color:red">
-
-
 
 	<section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
@@ -380,3 +373,5 @@ function showSlides() {
 			</div>
 		</div>
 	</footer>
+  </body>
+  </html>
