--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@ function showSlides() {
 <font style="font-size:35px; color:white">
   <a href="tel:9486737572"><img src="https://i.ibb.co/SR9Y5vQ/167-1673356-call-now-png-icon-transparent-png-removebg-preview-removebg-preview-removebg-preview.png" width="500" height="450">
   <img src="https://i.ibb.co/WVf8WZP/gmail-redesign-removebg-preview-1-removebg-preview.png">
+<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/9sQwyF9/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-2.png" width="650" height="600">
 
 <font style="font-size:55px; color:yellow">
 <b>Location</b></h1>
@@ -358,7 +359,7 @@ function showSlides() {
 	<footer>
 		<div class="bg-gray-800 bg-opacity-75">
 			<div class="container mx-auto py-4 px-7 flex flex-wrap flex-col sm:flex-row">
-				<p class="text-gray-300 text-sm text-center sm:text-left">© Dharrsan Education. All rights Reserved.
+				<p class="text-gray-300 text-sm text-center sm:text-left">© Chellam Store. All rights Reserved.
 				</p>
 				<span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
             <a  href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="text-gray-400">
