--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ function showSlides() {
     <p> Kanyakumari District,</p>
      <p>Tamil Nadu.<p>
       <font style="font-size:35px; color:white">
-       <p> <a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/RYFJTpy/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-4.png" width="650" height="600" ><font style="font-size:35px; font-family:arial ; color:red"><a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en" class="mr-5 hover:text-white">Detailed Location 👆 </a></p>
+       <p> <a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/6WXLs0z/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-3-removebg-preview.png" width="750" height="700" >
 
 			</div>
 		
