--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Best Quality. Low price">
 	<title>Chellam Supermarket</title>
 	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
@@ -317,7 +318,7 @@ function showSlides() {
     <p> Kanyakumari District,</p>
      <p>Tamil Nadu.<p>
       <font style="font-size:35px; color:white">
-       <p> <a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/6WXLs0z/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-3-removebg-preview.png" width="750" height="700" >
+       <p> <a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/6WXLs0z/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-3-removebg-preview.png" width="900" height="900">
 
 			</div>
 		
