--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@ function showSlides() {
 <b>Functional Hours</b></h1>
 <br>
 <font style="font-size:35px; color:red">
-  <li>Opening time : <font style="font-size:35px; color:white">8:00 Am </li>
+  <li>Opening time : <font style="font-size:35px; color:white">7:00 Am </li>
   <font style="font-size:35px; color:red">
   <li>Closing time : <font style="font-size:35px; color:white"> 9:00 Pm</li>
   <font style="font-size:35px; color:red">
-  <li>Working days  <font style="font-size:35px; color:white"> Everyday</li>  
+  <li>Working days : <font style="font-size:35px; color:white"> Everyday</li>  
   <br>
 			 <font style="font-size:55px; color:yellow">
 <b>Any Queries, Contact us</b></h1>
