--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ function showSlides() {
 <font style="font-size:35px; color:white">
   <a href="tel:9486737572"><img src="https://i.ibb.co/SR9Y5vQ/167-1673356-call-now-png-icon-transparent-png-removebg-preview-removebg-preview-removebg-preview.png" width="500" height="450">
   <img src="https://i.ibb.co/WVf8WZP/gmail-redesign-removebg-preview-1-removebg-preview.png">
-<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/RYFJTpy/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-4.png" width="650" height="600">
+<a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/RYFJTpy/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-4.png" width="650" height="600"></a>
 
 <font style="font-size:55px; color:yellow">
 <b>Location</b></h1>
@@ -316,9 +316,9 @@ function showSlides() {
   <p>Chellam Supermarket- Cheramangalam,<p>
     <p>Manavalakurichi, </p> 
     <p> Kanyakumari District,</p>
-     <p>Tamil Nadu.<p>
+     <p>Tamil Nadu.</p>
       <font style="font-size:35px; color:white">
-       <p> <a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/6WXLs0z/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-3-removebg-preview.png" width="900" height="900">
+        <a href="https://www.google.com/maps/dir//8.1640523,77.3001473/@8.1640899,77.2999275,109m/data=!3m1!1e3!4m2!4m1!3e0?hl=en"><img src="https://i.ibb.co/6WXLs0z/Google-Maps-removebg-preview-removebg-preview-2-removebg-preview-3-removebg-preview.png" width="900" height="900"></a>
 
 			</div>
 		
