--- a/index.html
+++ b/index.html
@@ -285,10 +285,14 @@ function showSlides() {
 <b>Our Services</b></h1>
 <br>
 <font style="font-size:35px; color:white">
-  <li>Best Quality Grocery in Valuable price </li>
-  <li>Diary products and Ice Creams </li>
-  <li>Stationery items </li>
-  <li>Fancy items </li>
+  <font style="font-size:35px; color:red">
+  <li><font style="font-size:35px; color:white">Best Quality Grocery in Valuable price </li>
+<font style="font-size:35px; color:red">
+  <li><font style="font-size:35px; color:white">Diary products and Ice Creams </li>
+<font style="font-size:35px; color:red">
+  <li><font style="font-size:35px; color:white">Stationery items </li>
+<font style="font-size:35px; color:red">
+  <li><font style="font-size:35px; color:white">Fancy items </li>
 <br>
   <font style="font-size:55px; color:yellow">
 <b>Functional Hours</b></h1>
