--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		}
 	</style>
  
-	<link rel="icon" href="https://i.ibb.co/b1XPwxh/Chellam-Stores.jpg" type="image/x-icon">
+	<link rel="icon" href="https://i.ibb.co/wQh6tTG/Supermarket.jpg" type="image/x-icon">
 	<header class="text-gray-400 bg-gray-900 body-font">
     <font style="font-size:56px; font-family:arial; color:cyan"><b><Center>Chellam Supermarket
       
@@ -148,7 +148,7 @@ img {vertical-align: middle;}
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 700px) {
   .prev, .next,.text {font-size: 11px}
 }
 </style>
@@ -157,7 +157,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   
-  <img src="https://findabest.in/images/Chellam%20Supermarket-%20Cheramangalam.jpg" style="width:100% height:60">
+  <img src="https://i.ibb.co/wQh6tTG/Supermarket.jpg" width:"500px" height:"400px"></a>
   
 </div>
 
